# excel-kpi-automation

./: .gitignore  2024 YieldByGroup.xlsx  Animal Parlour Performance.xlsx  Milking Performance. - 2026-01-25T030123.616.xlsx  README.md  pyproject.toml  requirements.txt
src/yem_sistem/: __init__.py  models.py
src/yem_sistem/acceptance/: __init__.py  models.py  routes.py  service.py
src/yem_sistem/analysis/: __init__.py  models.py  routes.py  service.py
src/yem_sistem/audit_logs/: models.py
src/yem_sistem/batch_items/: models.py
src/yem_sistem/dashboard/: __init__.py  routes.py
src/yem_sistem/db/: base.py  session.py  types.py
src/yem_sistem/imports/: __init__.py  dtm_batch_import.py  models.py  routes.py
src/yem_sistem/materials/: models.py
src/yem_sistem/monthly_prices/: models.py
src/yem_sistem/pen_daily/: models.py
src/yem_sistem/production_batches/: __init__.py  models.py  routes.py  service.py
src/yem_sistem/stock_movements/: __init__.py  models.py  service.py
src/yem_sistem/stocks/: __init__.py  routes.py
src/yem_sistem/web/: __init__.py  app.py  routes.py
src/yem_sistem/web/templates/: _layout.html  acceptance_list.html  acceptance_new.html  analysis_external_new.html  analysis_list.html  base.html  batch_fix.html  dashboard.html  stocks.html  suspicious_batches.html
