[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yem_sistem"
version = "0.1.0"
description = "Local inventory and production control backend for feed centers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "SQLAlchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1.0",
  "xlrd>=2.0.1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
